--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -4,7 +4,7 @@
   margin: auto;
   overflow: hidden;
   padding: 0 0;
-  margin-top: 6rem;
+  margin-top: 2rem;
   margin-bottom: 3rem;
 }
 
@@ -16,13 +16,18 @@
 }
 
 .large {
-  font-size: 3rem;
+  font-size: 2.5rem;
   line-height: 1.2;
   margin-bottom: 1rem;
 }
 
 .lead {
   font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.small {
+  font-size: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -54,6 +59,7 @@ span {
 
 .bold {
   font-weight: bold;
+  display: inline;
 }
 .round-img {
   border-radius: 50%;
@@ -65,6 +71,18 @@ span {
   margin: 1.5rem 0;
 }
 
+.section-title {
+  padding: 0 0 1rem 0;
+  color: #333;
+  text-align: center;
+}
+
+.section-title-line {
+  width: 5rem;
+  height: 0.2rem;
+  background-color: #333;
+  margin: 0 auto 0;
+}
 //backgrounds
 
 .bg {
