--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,11 +67,12 @@ img {
 
 //Homepage
 .homepage {
-  background: url("../img/dab1.jpg") no-repeat center left;
+  background: url("../img/dab1.jpg") no-repeat left bottom;
   background-size: cover;
   background-attachment: fixed; // parallex effect
-  background-position: bottom;
-  min-height: 780px;
+  background-position-y: bottom;
+  overflow: hidden;
+  min-height: 1000px;
   max-height: auto;
   padding-top: 7rem;
   margin-bottom: 2rem;
@@ -86,35 +87,6 @@ img {
     justify-content: top;
     text-align: center;
     position: absolute;
-  }
-  /*
-  position: relative;
-  height: 100%;
-  width: 100%;
-  padding: 0 120px;
-  background-image: url("../img/dab1.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-bottom: 100px;*/
-}
-
-//Landing
-
-.landing {
-  position: relative;
-  background: url("../img/showcase.jpeg") no-repeat center center/cover;
-  height: 100vh;
-
-  &-inner {
-    color: #fff;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    width: 80%;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
   }
 }
 
@@ -157,12 +129,6 @@ img {
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: repeat(auto-fill, 1fr);
 
-  /*
-  .education-background-1 {
-    display: flex;
-    grid-area: left;
-  }*/
-
   .education-place {
     color: $primary-color;
     grid-column: 3/11;
@@ -191,13 +157,19 @@ img {
   }
 }
 
+// Projects section
+
+.projects {
+  background-color: rgba(33, 37, 41, 1);
+}
+
 // Skills section
 
 .skills {
   margin-top: 1rem;
   padding-top: 3rem;
   display: grid;
-  background-color: rgba(9, 5, 199, 0.306);
+  //background-color: rgba(33, 37, 41, 1);
   font-size: 1rem;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
@@ -260,101 +232,25 @@ img {
   }
 }
 
-// Profiles page
+// Contact
 
-.profile {
-  display: grid;
-  grid-template-columns: 2fr 4fr 2fr;
-  grid-gap: 2rem;
+.contact {
   align-items: center;
   padding: 1rem;
   line-height: 1.8;
   margin-bottom: 1rem;
-}
-// Profile page
-/*
-.profile-grid {
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-areas:
-    "top top"
-    "about about"
-    "exp edu"
-    "github github";
-
-  .profile-top {
-    grid-area: top;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    img {
-      width: 250px;
-    }
-
-    .icons a {
-      color: #fff;
-      margin: 0 0.3rem;
-      &:hover {
-        color: $dark-color;
-      }
-    }
+  justify-items: center;
+  justify-content: center;
+  text-align: center;
+  a {
+    font-size: 2rem;
+    padding: 0rem 2rem;
   }
-
-  .profile-about {
-    text-align: center;
-    grid-area: about;
-    .skills {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-  }
-
-  .profile-exp {
-    grid-area: exp;
-  }
-  .profile-edu {
-    grid-area: edu;
-  }
-
-  .profile-exp,
-  .profile-edu {
-    & > div {
-      margin-bottom: 1rem;
-      padding-bottom: 1rem;
-      border-bottom: #ccc 1px dotted;
-      &:last-child {
-        border: none;
-      }
-    }
-
-    p {
-      margin: 0.5rem 0;
-    }
-  }
-
-  .profile-github {
-    grid-area: github;
-
-    .repo {
-      display: flex;
-
-      & > div:first-child {
-        flex: 7;
-        flex-basis: 70%;
-      }
-
-      & > div:last-child {
-        flex: 3;
-        flex-basis: 20%;
-      }
-    }
+  a:hover {
+    color: #333;
   }
 }
-*/
+
 // animation
 .animate1 {
   white-space: nowrap;
