--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,5 @@
-$primary-color: #17a2b8;
+$primary-color: #24d6f1;
+$secondary-color: #17a2b8;
 $dark-color: #252839;
 $light-color: #f4f4f4;
 $danger-color: #dc3545;
