--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -11,7 +11,6 @@
     ul {
       justify-content: center;
       text-align: center;
-      font-size: 0.9rem;
     }
 
     h1 {
@@ -34,26 +33,22 @@
   .lead {
     font-size: 1rem;
   }
-  /*
-  //profiles
-  .profile {
-    grid-template-columns: 1fr;
-    text-align: center;
-    ul {
-      display: none;
+
+  // Education
+  .education-logos {
+    grid-template-columns: 0.5fr 1fr 0.5fr;
+    grid-gap: 0;
+    .education-logo-imperial {
+      grid-column: 2;
+    }
+    .education-logo-ucl {
+      grid-column: 2;
+    }
+    .education-logo-bromsgrove {
+      grid-column: 2;
+      margin-right: 0;
     }
   }
-
-  .profile-grid {
-    grid-template-areas: "top" "about" "exp" "edu" "github";
-
-    .profile-about {
-      .skills {
-        flex-direction: column;
-      }
-    }
-  }
-  */
 }
 
 @media screen and (min-width: 1100px) {
