--- a/scss/style.scss
+++ b/scss/style.scss
@@ -132,8 +132,8 @@ img {
 
   background-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.4)
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.7)
     ),
     url("../img/ucl.jfif");
   background-repeat: no-repeat;
@@ -174,7 +174,65 @@ img {
 // Projects section
 
 .projects {
-  background-color: rgba(33, 37, 41, 1);
+  padding: 10rem 0;
+  margin-top: 2rem;
+  height: 100%;
+  width: auto;
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url("../img/imperial.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-rows: repeat(auto, 1fr);
+
+  &-title {
+    color: $primary-color;
+    grid-column: 4/11;
+    padding: 3.5rem 0 0 0;
+    text-align: left;
+    justify-items: left;
+    align-content: left;
+  }
+  &-summary {
+    color: #fff;
+    grid-column: 4/11;
+    padding: 1.5rem 0 0 0;
+    text-align: left;
+    justify-items: left;
+    align-content: left;
+  }
+  &-description {
+    color: #fff;
+    grid-column: 4/11;
+    padding: 0rem 0 0 0;
+    text-align: left;
+    justify-items: left;
+    align-content: left;
+  }
+
+  &-end {
+    color: #fff;
+    grid-column: 4/11;
+    padding: 3rem 0 0 0;
+    text-align: center;
+    justify-items: center;
+    align-content: center;
+  }
+
+  .projects-1 {
+    color: #fff;
+    grid-column: 3/11;
+    justify-content: left;
+    justify-items: left;
+    text-align: left;
+  }
 }
 
 // Skills section
@@ -183,13 +241,28 @@ img {
   margin-top: 1rem;
   padding-top: 3rem;
   display: grid;
-  //background-color: rgba(33, 37, 41, 1);
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.6)
+    ),
+    url("../img/imperial.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
   font-size: 1rem;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
   text-align: center;
   justify-content: center;
   justify-items: center;
+  .skills-inner {
+    height: 100%;
+    width: auto;
+    padding: 3rem;
+    background-color: rgba(255, 255, 255, 0.7);
+  }
   .skills-pic {
     min-height: 20vh;
     display: grid;
@@ -268,6 +341,38 @@ img {
   }
   a:hover {
     color: #333;
+  }
+  &-messageme {
+    padding: 1.5rem;
+  }
+  .form {
+    text-align: left;
+    align-items: left;
+    justify-items: left;
+  }
+  .form-group input,
+  .form-group textarea {
+    width: 100%;
+    padding: 10px;
+    resize: vertical;
+  }
+
+  .contact-messageme {
+    margin-top: -2.5rem;
+  }
+
+  button[type="submit"] {
+    width: 100%;
+    border: none;
+    outline: none;
+    padding: 1rem;
+    cursor: pointer;
+    transition: 0.2s;
+  }
+
+  button[type="submit"]:hover {
+    background-color: #333;
+    color: #fff;
   }
 }
 
