--- a/scss/style.scss
+++ b/scss/style.scss
@@ -95,14 +95,21 @@ img {
   margin: 0;
 }
 .education-logos {
+  padding: 4rem 0rem;
+  grid-column: 2/12;
   display: grid;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.7),
+    rgba(255, 255, 255, 0.7)
+  );
   margin-top: 2rem;
-  grid-template-columns: 0.5fr 1fr 1fr 1fr 0.5fr;
+  grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 1.5rem;
 
   .education-logo-imperial {
-    grid-column: 2;
+    grid-column: 1;
     height: 20vh;
     width: 100%;
     background: url("../img/imperial_logo.jpg") no-repeat center;
@@ -118,7 +125,7 @@ img {
   .education-logo-bromsgrove {
     margin-right: 4rem;
     height: 20vh;
-    background: url("../img/bromsgrove_logo.png") no-repeat center;
+    background: url("../img/bromsgrove_logo2.png") no-repeat center;
     background-size: contain;
   }
 }
