--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,8 +121,8 @@ img {
     display: grid;
     background-image: linear-gradient(
       to bottom,
-      rgba(255, 255, 255, 1),
-      rgba(146, 168, 20, 0.9)
+      rgba(255, 255, 255, 0.85),
+      rgba(146, 168, 20, 0.8)
     );
     margin-top: 2rem;
     grid-template-columns: 1fr 1fr 1fr;
@@ -210,7 +210,7 @@ img {
   &-summary {
     color: #fff;
     grid-column: 4/11;
-    padding: 1.5rem 0 0 0;
+    padding: 0rem 0 0 0;
     text-align: left;
     justify-items: left;
     align-content: left;
@@ -312,7 +312,7 @@ img {
     .img-6 {
       height: 15vh;
       width: 100%;
-      background: url("../img/microsoft.png") no-repeat center;
+      background: url("../img/docker.png") no-repeat center;
       background-size: contain;
     }
     .img-7 {
